# second-brain

./: .gitignore
.github/workflows/: build-windows.yml
app/: .gitignore  TECHNICAL_REPORT.md  bun.lockb  package.json  vite.config.js
app/docs/: macos-audio-setup.md
app/scripts/: download-models.sh
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: agent_queue.rs  agent_workers.rs  asr.rs  audio.rs  chunker.rs  embeddings.rs  entities.rs  knowledge_base.rs  lib.rs  llm_agent.rs  main.rs  models.rs  screenshot.rs  smart_turn.rs  speaker_diarization.rs  user_store.rs  web_crawler.rs
app/src/lib/: audio-pipeline.ts  smart-turn.ts  transcription.ts
app/src/lib/components/: KnowledgeBaseView.svelte  KnowledgeSearch.svelte  LLMSetup.svelte  MeetingDetailPage.svelte  MeetingPrepPage.svelte  ModelSetup.svelte  SecondBrain.svelte  TranscriptView.svelte
app/src/routes/: +page.svelte
app/src/routes/overlay/: +page.svelte
docs/: DESIGN_GUIDE.md  implementation.md  improvements.md  prompt.md
